updated api. fixed welcome message.
